[WARP-SPEED] Decrease warp connector stats that are not relevant
This reverts commit 63c00834693ade0c24d0fa61d1343590bc8e72a4.

This reverts commit 9bee6bff84e715fc70e518e87388c821a0e5d92e.

(cherry picked from commit a3f1e7f9efc4541c1d228752ae13f133a17949cc)