@@ -16,7 +16,6 @@ package io.trino.plugin.warp.metrics;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.atomic.LongAdder;
@@ -27,7 +26,8 @@ public class WarpStatsBase
     @JsonIgnore
     private final String jmxKey;
     private final WarpStatType warpStatType;
-    private Map auditMap = Collections.emptyMap();
+    @JsonIgnore
+    private Map<String, Long> auditMap = Map.of();
 
     protected WarpStatsBase(String jmxKey, WarpStatType warpStatType)
     {
@@ -41,24 +41,13 @@ public class WarpStatsBase
         return jmxKey;
     }
 
-    @JsonIgnore
-    public Map getAuditMap()
-    {
-        return auditMap;
-    }
-
     public Map<String, LongAdder> getCounters()
     {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     public void reset()
     {
-    }
-
-    public void merge(WarpStatsBase warpStatsBase)
-    {
-        throw new UnsupportedOperationException();
     }
 
     public void mergeStats(WarpStatsBase warpStatsBase)
@@ -68,17 +57,17 @@ public class WarpStatsBase
 
     public Map<String, Long> statsCounterMapper()
     {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     protected Map<String, Long> deltaPrintFields()
     {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     protected Map<String, Long> statePrintFields()
     {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     public WarpStatType getWarpStatType()
@@ -86,14 +75,14 @@ public class WarpStatsBase
         return warpStatType;
     }
 
-    public <K, V> Map<K, V> printStatsMap()
+    public Map<String, Object> printStatsMap()
     {
-        Map newAuditMap = deltaPrintFields();
-        Map res = new HashMap();
+        Map<String, Long> newAuditMap = deltaPrintFields();
+        Map<String, Object> res = new HashMap<>();
         newAuditMap.forEach((k, v) -> {
             Long prevVal = (Long) auditMap.get(k);
             if (prevVal == null || !prevVal.equals(v)) {
-                res.put(k, formatDeltaValue((Long) v, prevVal));
+                res.put(k, formatDeltaValue(v, prevVal));
             }
         });
         res.putAll(statePrintFields());
